// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDrawer component should match a snapshot when a contact has 1 phone number 1`] = `
<ContactDrawer
  contacts={
    Array [
      Object {
        "email": undefined,
        "homePhone": undefined,
        "id": "2",
        "mobilePhone": "0421774271",
        "name": "Joe Bloggs",
        "type": undefined,
        "workPhone": undefined,
      },
    ]
  }
  handleClose={[Function]}
  isOpen={true}
>
  <Drawer
    handleClose={[Function]}
    isOpen={true}
  >
    <div
      className=""
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className=""
      onMouseDown={[Function]}
    >
      <DrawerHeader
        handleClose={[Function]}
        title="Reach out to Joe Bloggs"
      >
        <div
          className=""
        >
          <h2
            className=""
          >
            Reach out to Joe Bloggs
          </h2>
          <IconButton
            icon="cancel"
            onClick={[Function]}
            size="small"
          >
            <button
              className=""
              onClick={[Function]}
            >
              <Icon
                icon="cancel"
              >
                <span
                  className=""
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                >
                  <SvgCancel>
                    <svg
                      data-file-name="SvgCancel"
                    />
                  </SvgCancel>
                </span>
              </Icon>
            </button>
          </IconButton>
        </div>
      </DrawerHeader>
      <PhoneRow
        label="Mobile"
        phoneNumber="0421774271"
        showMobileActions={true}
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Mobile
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="https://wa.me/44421774271"
                    >
                      <IconButton
                        icon="whatsapp"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="whatsapp"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgWhatsapp>
                                <svg
                                  data-file-name="SvgWhatsapp"
                                />
                              </SvgWhatsapp>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="sms:0421774271"
                    >
                      <IconButton
                        icon="sms"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="sms"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgSms>
                                <svg
                                  data-file-name="SvgSms"
                                />
                              </SvgSms>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <EmailRow
        label="Email"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={10}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Email
                  </div>
                  <div
                    className=""
                  >
                    No email found
                  </div>
                </div>
              </Col>
              <Col
                span={6}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </EmailRow>
    </div>
  </Drawer>
</ContactDrawer>
`;

exports[`ContactDrawer component should match a snapshot when a contact has no phone numbers 1`] = `
<ContactDrawer
  contacts={
    Array [
      Object {
        "email": undefined,
        "homePhone": undefined,
        "id": "1",
        "mobilePhone": undefined,
        "name": "Joe Bloggs",
        "type": undefined,
        "workPhone": undefined,
      },
    ]
  }
  handleClose={[Function]}
  isOpen={true}
>
  <Drawer
    handleClose={[Function]}
    isOpen={true}
  >
    <div
      className=""
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className=""
      onMouseDown={[Function]}
    >
      <DrawerHeader
        handleClose={[Function]}
        title="Reach out to Joe Bloggs"
      >
        <div
          className=""
        >
          <h2
            className=""
          >
            Reach out to Joe Bloggs
          </h2>
          <IconButton
            icon="cancel"
            onClick={[Function]}
            size="small"
          >
            <button
              className=""
              onClick={[Function]}
            >
              <Icon
                icon="cancel"
              >
                <span
                  className=""
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                >
                  <SvgCancel>
                    <svg
                      data-file-name="SvgCancel"
                    />
                  </SvgCancel>
                </span>
              </Icon>
            </button>
          </IconButton>
        </div>
      </DrawerHeader>
      <PhoneRow
        label="Phone"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Phone
                  </div>
                  <div
                    className=""
                  >
                    No phone number found
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <EmailRow
        label="Email"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={10}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Email
                  </div>
                  <div
                    className=""
                  >
                    No email found
                  </div>
                </div>
              </Col>
              <Col
                span={6}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </EmailRow>
    </div>
  </Drawer>
</ContactDrawer>
`;

exports[`ContactDrawer component should match a snapshot when a vendor has 3 phone numbers 1`] = `
<ContactDrawer
  contacts={
    Array [
      Object {
        "email": undefined,
        "homePhone": "0421774271",
        "id": "3",
        "mobilePhone": "0421774271",
        "name": "Joe Bloggs",
        "type": undefined,
        "workPhone": "0421774271",
      },
    ]
  }
  handleClose={[Function]}
  isOpen={true}
>
  <Drawer
    handleClose={[Function]}
    isOpen={true}
  >
    <div
      className=""
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className=""
      onMouseDown={[Function]}
    >
      <DrawerHeader
        handleClose={[Function]}
        title="Reach out to Joe Bloggs"
      >
        <div
          className=""
        >
          <h2
            className=""
          >
            Reach out to Joe Bloggs
          </h2>
          <IconButton
            icon="cancel"
            onClick={[Function]}
            size="small"
          >
            <button
              className=""
              onClick={[Function]}
            >
              <Icon
                icon="cancel"
              >
                <span
                  className=""
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                >
                  <SvgCancel>
                    <svg
                      data-file-name="SvgCancel"
                    />
                  </SvgCancel>
                </span>
              </Icon>
            </button>
          </IconButton>
        </div>
      </DrawerHeader>
      <PhoneRow
        label="Mobile"
        phoneNumber="0421774271"
        showMobileActions={true}
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Mobile
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="https://wa.me/44421774271"
                    >
                      <IconButton
                        icon="whatsapp"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="whatsapp"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgWhatsapp>
                                <svg
                                  data-file-name="SvgWhatsapp"
                                />
                              </SvgWhatsapp>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="sms:0421774271"
                    >
                      <IconButton
                        icon="sms"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="sms"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgSms>
                                <svg
                                  data-file-name="SvgSms"
                                />
                              </SvgSms>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Home"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Home
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Work"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Work
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <EmailRow
        label="Email"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={10}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Email
                  </div>
                  <div
                    className=""
                  >
                    No email found
                  </div>
                </div>
              </Col>
              <Col
                span={6}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </EmailRow>
    </div>
  </Drawer>
</ContactDrawer>
`;

exports[`ContactDrawer component should match a snapshot when there are 2 contacts 1`] = `
<ContactDrawer
  contacts={
    Array [
      Object {
        "email": undefined,
        "homePhone": "0421774271",
        "id": "3",
        "mobilePhone": "0421774271",
        "name": "Joe Bloggs",
        "type": undefined,
        "workPhone": "0421774271",
      },
      Object {
        "email": undefined,
        "homePhone": "0421774271",
        "id": "3",
        "mobilePhone": "0421774271",
        "name": "Joe Bloggs",
        "type": undefined,
        "workPhone": "0421774271",
      },
    ]
  }
  handleClose={[Function]}
  isOpen={true}
>
  <Drawer
    handleClose={[Function]}
    isOpen={true}
  >
    <div
      className=""
      onClick={[Function]}
      onMouseDown={[Function]}
    />
    <div
      className=""
      onMouseDown={[Function]}
    >
      <DrawerHeader
        handleClose={[Function]}
        title="Reach out to Joe Bloggs"
      >
        <div
          className=""
        >
          <h2
            className=""
          >
            Reach out to Joe Bloggs
          </h2>
          <IconButton
            icon="cancel"
            onClick={[Function]}
            size="small"
          >
            <button
              className=""
              onClick={[Function]}
            >
              <Icon
                icon="cancel"
              >
                <span
                  className=""
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": undefined,
                    }
                  }
                >
                  <SvgCancel>
                    <svg
                      data-file-name="SvgCancel"
                    />
                  </SvgCancel>
                </span>
              </Icon>
            </button>
          </IconButton>
        </div>
      </DrawerHeader>
      <PhoneRow
        label="Mobile"
        phoneNumber="0421774271"
        showMobileActions={true}
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Mobile
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="https://wa.me/44421774271"
                    >
                      <IconButton
                        icon="whatsapp"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="whatsapp"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgWhatsapp>
                                <svg
                                  data-file-name="SvgWhatsapp"
                                />
                              </SvgWhatsapp>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="sms:0421774271"
                    >
                      <IconButton
                        icon="sms"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="sms"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgSms>
                                <svg
                                  data-file-name="SvgSms"
                                />
                              </SvgSms>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Home"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Home
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Work"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Work
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <EmailRow
        label="Email"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={10}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Email
                  </div>
                  <div
                    className=""
                  >
                    No email found
                  </div>
                </div>
              </Col>
              <Col
                span={6}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </EmailRow>
      <h2
        className=""
      >
        <span>
          Joe Bloggs
        </span>
        <Tag
          label="Additional contact"
        >
          <span
            className=""
          >
            Additional contact
          </span>
        </Tag>
      </h2>
      <PhoneRow
        label="Mobile"
        phoneNumber="0421774271"
        showMobileActions={true}
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Mobile
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="https://wa.me/44421774271"
                    >
                      <IconButton
                        icon="whatsapp"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="whatsapp"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgWhatsapp>
                                <svg
                                  data-file-name="SvgWhatsapp"
                                />
                              </SvgWhatsapp>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="sms:0421774271"
                    >
                      <IconButton
                        icon="sms"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="sms"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgSms>
                                <svg
                                  data-file-name="SvgSms"
                                />
                              </SvgSms>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Home"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Home
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <PhoneRow
        label="Work"
        phoneNumber="0421774271"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Work
                  </div>
                  <div
                    className=""
                  >
                    0421774271
                  </div>
                </div>
              </Col>
              <Col
                span={8}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <a
                      href="tel:0421774271"
                    >
                      <IconButton
                        icon="call"
                      >
                        <button
                          className=""
                        >
                          <Icon
                            icon="call"
                          >
                            <span
                              className=""
                              style={
                                Object {
                                  "color": undefined,
                                  "fontSize": undefined,
                                }
                              }
                            >
                              <SvgCall>
                                <svg
                                  data-file-name="SvgCall"
                                />
                              </SvgCall>
                            </span>
                          </Icon>
                        </button>
                      </IconButton>
                    </a>
                  </div>
                </div>
              </Col>
            </div>
          </Grid>
        </div>
      </PhoneRow>
      <EmailRow
        label="Email"
      >
        <div
          className=""
        >
          <Grid>
            <div
              className=""
            >
              <Col
                span={10}
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    Email
                  </div>
                  <div
                    className=""
                  >
                    No email found
                  </div>
                </div>
              </Col>
              <Col
                span={6}
              >
                <div
                  className=""
                />
              </Col>
            </div>
          </Grid>
        </div>
      </EmailRow>
    </div>
  </Drawer>
</ContactDrawer>
`;
